[gd_scene format=3 uid="uid://bk8n3iu0l3lk2"]

[ext_resource type="Script" uid="uid://blo50i0s34ri5" path="res://scripts/create.gd" id="1_b0i6l"]
[ext_resource type="Shader" uid="uid://bmrnjspjnxqab" path="res://shaders/wiggle.gdshader" id="2_b0hbb"]
[ext_resource type="Texture2D" uid="uid://codpcidrfdnpo" path="res://assets/base.png" id="3_toonf"]
[ext_resource type="Script" uid="uid://sw4qwwf46q6f" path="res://components/trozo_attach.gd" id="4_hrf6i"]
[ext_resource type="ButtonGroup" uid="uid://csj7tcrwgyth7" path="res://resources/button_groups/ojos.tres" id="5_jdoj7"]
[ext_resource type="Texture2D" uid="uid://cbfms21e4hnj2" path="res://assets/icon.svg" id="6_t7pq5"]
[ext_resource type="Script" uid="uid://dqvyj80watjic" path="res://components/trozo_button.gd" id="7_snhkh"]
[ext_resource type="ButtonGroup" uid="uid://dw7821ghpatx7" path="res://resources/button_groups/cabeza.tres" id="8_xcug1"]
[ext_resource type="Script" uid="uid://dqe8kefwtf0y3" path="res://components/trozo_color_picker.gd" id="9_b0hbb"]
[ext_resource type="PackedScene" uid="uid://d3i3qli7l3int" path="res://scenes/settings.tscn" id="10_toonf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(0.9384615, 0.36711675, 0.59112024, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1p5nq"]
shader = ExtResource("2_b0hbb")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 10.0
shader_parameter/intensityY = 10.0
shader_parameter/seed = 2002.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]

[node name="Create" type="VBoxContainer" unique_id=1630423358]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0i6l")

[node name="Control" type="Control" parent="." unique_id=2123502083]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="HBoxContainer" parent="Control" unique_id=1465322366]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="AspectRatioContainer" type="PanelContainer" parent="Control/Control" unique_id=1053869464]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_62e2m")

[node name="Mask" type="Control" parent="Control/Control/AspectRatioContainer" unique_id=1823585992]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Control/AspectRatioContainer/Mask" unique_id=477002135]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 35.0
offset_right = 53.0
offset_bottom = 58.0
grow_horizontal = 2
text = "Una de queso porfa"

[node name="Model" type="Node2D" parent="Control/Control/AspectRatioContainer/Mask" unique_id=1802959183]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1p5nq")
position = Vector2(238, 263)

[node name="Base" type="Sprite2D" parent="Control/Control/AspectRatioContainer/Mask/Model" unique_id=4025297]
use_parent_material = true
texture = ExtResource("3_toonf")

[node name="AttachExtras" type="Sprite2D" parent="Control/Control/AspectRatioContainer/Mask/Model" unique_id=48741904]
use_parent_material = true
script = ExtResource("4_hrf6i")
metadata/_custom_type_script = "uid://sw4qwwf46q6f"

[node name="AttachCabeza" type="Sprite2D" parent="Control/Control/AspectRatioContainer/Mask/Model" unique_id=406181218]
use_parent_material = true
script = ExtResource("4_hrf6i")
metadata/_custom_type_script = "uid://sw4qwwf46q6f"

[node name="AttachOjos" type="Sprite2D" parent="Control/Control/AspectRatioContainer/Mask/Model" unique_id=610171694]
use_parent_material = true
script = ExtResource("4_hrf6i")
metadata/_custom_type_script = "uid://sw4qwwf46q6f"

[node name="AttachMandibula" type="Sprite2D" parent="Control/Control/AspectRatioContainer/Mask/Model" unique_id=2094301430]
use_parent_material = true
script = ExtResource("4_hrf6i")
metadata/_custom_type_script = "uid://sw4qwwf46q6f"

[node name="PanelContainer" type="PanelContainer" parent="Control/Control" unique_id=1751635438]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemList" type="TabContainer" parent="Control/Control/PanelContainer" unique_id=55624008]
layout_mode = 2
current_tab = 0
tab_0/title = "ui_head"
tab_1/title = "ui_eyes"
tab_2/title = "ui_jaw"

[node name="Cabeza" type="ScrollContainer" parent="Control/Control/PanelContainer/ItemList" unique_id=322783629]
layout_mode = 2
metadata/_tab_index = 0
metadata/_tab_name = "ui_head"

[node name="MarginContainer" type="MarginContainer" parent="Control/Control/PanelContainer/ItemList/Cabeza" unique_id=646515163]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="FlowContainer" type="FlowContainer" parent="Control/Control/PanelContainer/ItemList/Cabeza/MarginContainer" unique_id=683205552]
layout_mode = 2
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 20
alignment = 1
last_wrap_alignment = 1

[node name="Button3" type="Button" parent="Control/Control/PanelContainer/ItemList/Cabeza/MarginContainer/FlowContainer" unique_id=2139517769]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_jdoj7")
icon = ExtResource("6_t7pq5")
script = ExtResource("7_snhkh")
trozo_id = 3
metadata/_custom_type_script = "uid://dqvyj80watjic"

[node name="Ojos" type="ScrollContainer" parent="Control/Control/PanelContainer/ItemList" unique_id=1994056443]
visible = false
layout_mode = 2
metadata/_tab_index = 1
metadata/_tab_name = "ui_eyes"

[node name="MarginContainer" type="MarginContainer" parent="Control/Control/PanelContainer/ItemList/Ojos" unique_id=107702921]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="FlowContainer" type="FlowContainer" parent="Control/Control/PanelContainer/ItemList/Ojos/MarginContainer" unique_id=1332401078]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 20
alignment = 1
last_wrap_alignment = 1

[node name="Button" type="Button" parent="Control/Control/PanelContainer/ItemList/Ojos/MarginContainer/FlowContainer" unique_id=657849849]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_xcug1")
icon = ExtResource("6_t7pq5")
expand_icon = true
script = ExtResource("7_snhkh")
trozo_id = 1
metadata/_custom_type_script = "uid://dqvyj80watjic"

[node name="Button2" type="Button" parent="Control/Control/PanelContainer/ItemList/Ojos/MarginContainer/FlowContainer" unique_id=525267718]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_xcug1")
icon = ExtResource("6_t7pq5")
expand_icon = true
script = ExtResource("7_snhkh")
trozo_id = 2
metadata/_custom_type_script = "uid://dqvyj80watjic"

[node name="Mandibula" type="ScrollContainer" parent="Control/Control/PanelContainer/ItemList" unique_id=1193719746]
visible = false
layout_mode = 2
metadata/_tab_index = 2
metadata/_tab_name = "ui_jaw"

[node name="MarginContainer" type="MarginContainer" parent="Control/Control/PanelContainer/ItemList/Mandibula" unique_id=1400085132]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="FlowContainer" type="FlowContainer" parent="Control/Control/PanelContainer/ItemList/Mandibula/MarginContainer" unique_id=1464156042]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 20
alignment = 1
last_wrap_alignment = 1

[node name="Extras" type="ScrollContainer" parent="Control/Control/PanelContainer/ItemList" unique_id=515249951]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/Control/PanelContainer/ItemList/Extras" unique_id=1960943464]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="FlowContainer" type="FlowContainer" parent="Control/Control/PanelContainer/ItemList/Extras/MarginContainer" unique_id=117666931]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 20
alignment = 1
last_wrap_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1493944895]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4bf")

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer" unique_id=1306029837]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer3" unique_id=2103164927]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuButton" type="Button" parent="PanelContainer/HBoxContainer3/HBoxContainer2" unique_id=2113994584]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ui_main_menu"

[node name="SettingsButton" type="Button" parent="PanelContainer/HBoxContainer3/HBoxContainer2" unique_id=70433581]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ui_settings"

[node name="NextButton" type="Button" parent="PanelContainer/HBoxContainer3" unique_id=780538727]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ui_finish"

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1636311401]

[node name="ColorPickers" type="VBoxContainer" parent="CanvasLayer" unique_id=655954926]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -86.0
offset_right = 20.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1

[node name="cabeza" type="ColorPickerButton" parent="CanvasLayer/ColorPickers" unique_id=1610458723]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 1)
script = ExtResource("9_b0hbb")
metadata/_custom_type_script = "uid://dqe8kefwtf0y3"

[node name="ojos" type="ColorPickerButton" parent="CanvasLayer/ColorPickers" unique_id=1168095431]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 1)
script = ExtResource("9_b0hbb")
metadata/_custom_type_script = "uid://dqe8kefwtf0y3"

[node name="nariz" type="ColorPickerButton" parent="CanvasLayer/ColorPickers" unique_id=1337083917]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 1)
script = ExtResource("9_b0hbb")
metadata/_custom_type_script = "uid://dqe8kefwtf0y3"

[node name="boca" type="ColorPickerButton" parent="CanvasLayer/ColorPickers" unique_id=767976752]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 1)
script = ExtResource("9_b0hbb")
metadata/_custom_type_script = "uid://dqe8kefwtf0y3"

[node name="Settings" parent="CanvasLayer" unique_id=1520513264 instance=ExtResource("10_toonf")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="PanelContainer/HBoxContainer3/HBoxContainer2/MenuButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer3/HBoxContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
